[BI-380] Fix header overlap issue

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -329,7 +329,7 @@ table tr.is-edited + .detail {
   }
 }
 
-header {
+.main-header {
   position: sticky;
   top: 0;
   background: white;
